--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "developer2.reliefapps@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "autoload" : {
         "psr-4" : {
             "RA\\DocBundle\\" : ""
