--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,11 @@
     "require": {
         "php" : ">=7.0",
         "symfony/framework-bundle" : ">=2.5.6",
-        "knplabs/knp-gaufrette-bundle": "~0.3",
-        "liip/imagine-bundle": "^1.6",
-        "vich/uploader-bundle": "^1.3",
-        "aws/aws-sdk-php-symfony": "~1.0",
-        "jms/serializer-bundle": "^1.1"
+        "knplabs/knp-gaufrette-bundle": ">=0.3",
+        "liip/imagine-bundle": ">=1.6",
+        "vich/uploader-bundle": ">=1.3",
+        "aws/aws-sdk-php-symfony": ">=1.0",
+        "jms/serializer-bundle": ">=1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2",
